--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,71 +7,37 @@ permalink: /projects/
   <h2>Projects</h2>
   <p>Here are some projects I'm currently working on or have worked on in the past!</p>
   <div id="projects-wrap">
+    {% for project in site.projects %}
+      <div class="card" >
 
-  <!--   <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">Portfolio</h2>
-        <h3 class="section-subheading text-muted">Here are some of the projects that I've worked on in the past.</h3>
-      </div>
-    </div> -->
-    <!-- <div class="col-md-4 col-sm-6 portfolio-item">
-      <a class="portfolio-link" data-toggle="modal" href="#portfolioModal12">
-        <div class="portfolio-hover">
-          <div class="portfolio-hover-content">
-            <i class="fas fa-plus fa-3x"></i>
+        <a href="" data-toggle="modal" data-target="#{{project.key}}">
+          <img src="{{project.cover}}" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{project.title}}</h5>
+            <p class="card-text">{{project.description}}</p>
+          </div>
+        </a>
+        <div class="card-badges-wrap">
+        <div class="card-badges">
+          <div class="badge badge-pill border border-dark"> <i class="fab fa-github" href="https://www.github.com"></i> Github</div>
           </div>
         </div>
-        <img  class="portfolio-cover" src="img/portfolio/appreader1.png" alt="">
-      </a>
-      <div class="portfolio-caption">
-        <h4>HackMIT Appreader</h4>
-        <p class="text-muted">Personal Project</p>
+      </div>  
+      <div class="modal fade" id="{{project.key}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="exampleModalLongTitle">{{project.title}}</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body project-content">
+              {{project.content}}
+            </div>
+          </div>
+        </div>
       </div>
-    </div> -->
-    <div class="card" >
-      <a href="">
-        <img src="/assets/images/portfolio/appreader1.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">1 Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </a>
-    </div>
-    <div class="card" >
-      <a href="">
-        <img src="/assets/images/portfolio/beaverworks2.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">2 Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </a>
-    </div>
-    <div class="card" >
-      <a href="">
-        <img src="/assets/images/portfolio/accion1.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">3 Card title</h5>
-          <p class="card-text">Some .</p>
-        </div>
-      </a>
-    </div>
-    <div class="card" >
-      <a href="">
-        <img src="/assets/images/portfolio/appreader1.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">4 Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </a>
-    </div>
-    <div class="card" >
-      <a href="">
-        <img src="/assets/images/portfolio/appreader1.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">5 Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </a>
-    </div>
+    {% endfor %}
   </div>
 </div>
