--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,7 +11,7 @@ permalink: /projects/
       <div class="card" >
 
         <a href="" data-toggle="modal" data-target="#{{project.key}}">
-          <img src="{{project.cover}}" class="card-img-top" alt="...">
+          <img src="{{site.url}}{{site.baseurl}}{{project.cover}}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{project.title}}</h5>
             <p class="card-text">{{project.description}}</p>
